--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   image_picker: ^1.2.1
   signature: ^6.3.0
   url_launcher: ^6.3.2
+  flutter_html: ^3.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
