--- a/mobile/analysis_options.yaml
+++ b/mobile/analysis_options.yaml
@@ -21,8 +21,31 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    avoid_print: true
+    prefer_single_quotes: true
+    prefer_const_constructors: true
+    prefer_final_fields: true
+    sized_box_for_whitespace: true
+    use_key_in_widget_constructors: true
+    empty_statements: true
+    no_leading_underscores_for_local_identifiers: true
+    unnecessary_getters_setters: true
+    prefer_is_not_empty: true
+    unnecessary_this: true
+    prefer_collection_literals: true
+    avoid_unnecessary_containers: true
+    prefer_initializing_formals: true
+    use_build_context_synchronously: true
+    avoid_returning_null_for_void: true
+    cascade_invocations: true
+    prefer_if_null_operators: true
+    prefer_spread_collections: true
+    avoid_web_libraries_in_flutter: true
+    sort_constructors_first: true
+    sort_child_properties_last: true
+    always_use_package_imports: true
+    public_member_api_docs: true
+
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
