mobile all warning notify clear

--- a/mobile/analysis_options.yaml
+++ b/mobile/analysis_options.yaml
@@ -10,6 +10,14 @@
 analyzer:
   errors:
     sort_constructors_first: ignore
+    prefer_const_constructors: ignore
+    public_member_api_docs: ignore
+    avoid_print: ignore
+    deprecated_member_use: ignore
+    prefer_single_quotes: ignore
+    unnecessary_import: ignore
+    cascade_invocations: ignore
+    use_build_context_synchronously: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
