--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   firebase_auth: ^5.2.0
   firebase_messaging: ^15.1.0
   flutter_local_notifications: ^19.5.0
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
