--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   share_plus: ^9.0.0
 
+  flutter_svg: ^2.0.10
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -99,6 +101,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon/icon.png
+    - assets/images/
   #   - assets/images/onboarding_1.png
   #   - assets/images/onboarding_2.png
   #   - assets/images/onboarding_3.png
