api and mobile all file updated

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mobile
-description: "A new Flutter project."
+description: "Talâbî application"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -66,6 +66,8 @@ dependencies:
   share_plus: ^9.0.0
 
   flutter_svg: ^2.0.10
+  firebase_analytics: ^11.3.0
+  firebase_crashlytics: ^4.1.0
 
 dev_dependencies:
   flutter_test:
