--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   flutter_svg: ^2.0.10
   firebase_analytics: ^11.3.0
   firebase_crashlytics: ^4.1.0
+  cached_network_image: ^3.3.1
+  flutter_cache_manager: ^3.3.1
 
 dev_dependencies:
   flutter_test:
