--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   firebase_crashlytics: ^4.1.0
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
