--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -89,7 +89,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/icon.png"
+  # image_path: "assets/icon/icon.png"  # Icon dosyası bulunamadı, geçici olarak devre dışı
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
@@ -105,7 +105,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icon/icon.png
+    # - assets/icon/icon.png  # Icon dosyası bulunamadı, geçici olarak devre dışı
     - assets/images/
   #   - assets/images/onboarding_1.png
   #   - assets/images/onboarding_2.png
