all backend updated and unit test updated

--- a/src/Talabi.Api/appsettings.json
+++ b/src/Talabi.Api/appsettings.json
@@ -37,12 +37,21 @@
   "GoogleMaps": {
     "ApiKey": "AIzaSyD16-TRK-OlZwz3wgZCJ8c5_CEWQ-zGkQU"
   },
+  "Facebook": {
+    "AppId": "USE_USER_SECRETS_OR_ENVIRONMENT_VARIABLES",
+    "AppSecret": "USE_USER_SECRETS_OR_ENVIRONMENT_VARIABLES"
+  },
   "Firebase": {
-    "CredentialPath": "firebase-adminsdk.json"
+    "CredentialPath": "firebase-adminsdk.json",
+    "CredentialJson": null
+  },
+  "FileUploadSecurity": {
+    "MaxFileSizeBytes": 5242880,
+    "AllowedExtensions": []
   },
   "Email": {
     "SmtpServer": "smtp.stackmail.com",
-    "SmtpPort": 465,
+    "SmtpPort": 587,
     "UseSsl": true,
     "UseTls": true,
     "SenderEmail": "info@gmsglobal.tr",
@@ -50,22 +59,19 @@
     "SenderName": "Talabi",
     "Timeout": 30000
   },
-  "Cors": {
-    "AllowedOrigins": [],
-    "AllowCredentials": true,
-    "AllowedMethods": [ "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS" ],
-    "AllowedHeaders": [ "*" ],
-    "ExposedHeaders": [ "*" ],
-    "MaxAge": 3600
-  },
   "PasswordPolicy": {
-    "MinimumLength": 6,
+    "MinimumLength": 8,
     "RequireDigit": true,
     "RequireLowercase": true,
     "RequireUppercase": true,
     "RequireNonAlphanumeric": true,
     "MaxFailedAttempts": 5,
     "LockoutDurationMinutes": 15
+  },
+  "VerificationCodeSecurity": {
+    "MaxFailedAttempts": 5,
+    "LockoutDurationMinutes": 15,
+    "AttemptWindowMinutes": 10
   },
   "Cache": {
     "CategoriesKeyPrefix": "categories",
@@ -79,5 +85,30 @@
     "PopularProductsKeyPrefix": "popular_products",
     "PopularProductsCacheTTLMinutes": 30,
     "DefaultCacheTTLMinutes": 15
+  },
+  "Cors": {
+    "Local": {
+      "AllowedOrigins": [
+        "http://localhost:3000",
+        "http://localhost:3001",
+        "http://localhost:8080",
+        "http://127.0.0.1:3000",
+        "http://127.0.0.1:3001",
+        "http://127.0.0.1:8080",
+        "http://localhost:5173",
+        "http://127.0.0.1:5173"
+      ]
+    },
+    "Test": {
+      "AllowedOrigins": ["https://talabi.runasp.net/"]
+    },
+    "Production": {
+      "AllowedOrigins": ["https://talabi.runasp.net/"]
+    },
+    "AllowCredentials": true,
+    "AllowedMethods": [ "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS" ],
+    "AllowedHeaders": [ "*" ],
+    "ExposedHeaders": [ "*" ],
+    "MaxAge": 3600
   }
 }
