--- a/tests/Talabi.Api.Tests.Penetration/Talabi.Api.Tests.Penetration.csproj
+++ b/tests/Talabi.Api.Tests.Penetration/Talabi.Api.Tests.Penetration.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Talabi.Api\Talabi.Api.csproj" />
+    <ProjectReference Include="..\..\src\Talabi.Api\Talabi.Api.csproj" />
   </ItemGroup>
 
 </Project>
