--- a/src/Talabi.Api/appsettings.Development.json
+++ b/src/Talabi.Api/appsettings.Development.json
@@ -22,16 +22,24 @@
     }
   },
   "Cors": {
-    "AllowedOrigins": [
-      "http://localhost:3000",
-      "http://localhost:3001",
-      "http://localhost:8080",
-      "http://127.0.0.1:3000",
-      "http://127.0.0.1:3001",
-      "http://127.0.0.1:8080",
-      "http://localhost:5173",
-      "http://127.0.0.1:5173"
-    ],
+    "Local": {
+      "AllowedOrigins": [
+        "http://localhost:3000",
+        "http://localhost:3001",
+        "http://localhost:8080",
+        "http://127.0.0.1:3000",
+        "http://127.0.0.1:3001",
+        "http://127.0.0.1:8080",
+        "http://localhost:5173",
+        "http://127.0.0.1:5173"
+      ]
+    },
+    "Test": {
+      "AllowedOrigins": []
+    },
+    "Production": {
+      "AllowedOrigins": []
+    },
     "AllowCredentials": true,
     "AllowedMethods": [ "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS" ],
     "AllowedHeaders": [ "*" ],
