--- a/tests/Talabi.Api.Tests/Talabi.Api.Tests.csproj
+++ b/tests/Talabi.Api.Tests/Talabi.Api.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Talabi.Api\Talabi.Api.csproj" />
+    <ProjectReference Include="..\..\src\Talabi.Api\Talabi.Api.csproj" />
   </ItemGroup>
 
 </Project>
