feat: Implement password reset flow, address management screens, and multi-language support for EN, AR, TR.

--- a/src/Talabi.Api/appsettings.json
+++ b/src/Talabi.Api/appsettings.json
@@ -51,14 +51,18 @@
   },
   "Email": {
     "SmtpServer": "smtp.stackmail.com",
-    "SmtpPort": 587,
+    "SmtpPort": 465,
     "UseSsl": true,
     "UseTls": true,
     "SenderEmail": "info@gmsglobal.tr",
     "SenderPassword": "Ql4e1befd",
     "SenderName": "Talabi",
     "Timeout": 30000,
-    "AdminEmail": "aydemirosmanali@gmail.com"
+    "AdminEmail": "aydemirosmanali@gmail.com",
+    "Hotmail": {
+      "SenderEmail": "osmanaliaydemir@hotmail.com",
+      "SenderPassword": "!1q2w3e4R*"
+    }
   },
   "ErrorLogging": {
     "AdminEmail": "aydemirosmanali@gmail.com",
@@ -109,15 +113,30 @@
       ]
     },
     "Test": {
-      "AllowedOrigins": ["https://talabi.runasp.net/"]
+      "AllowedOrigins": [
+        "https://talabi.runasp.net/"
+      ]
     },
     "Production": {
-      "AllowedOrigins": ["https://talabi.runasp.net/"]
+      "AllowedOrigins": [
+        "https://talabi.runasp.net/"
+      ]
     },
     "AllowCredentials": true,
-    "AllowedMethods": [ "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS" ],
-    "AllowedHeaders": [ "*" ],
-    "ExposedHeaders": [ "*" ],
+    "AllowedMethods": [
+      "GET",
+      "POST",
+      "PUT",
+      "DELETE",
+      "PATCH",
+      "OPTIONS"
+    ],
+    "AllowedHeaders": [
+      "*"
+    ],
+    "ExposedHeaders": [
+      "*"
+    ],
     "MaxAge": 3600
   }
 }
