chore: Increment mobile build version, remove Hotmail email sender configuration, and update iOS project settings.

--- a/src/Talabi.Api/appsettings.json
+++ b/src/Talabi.Api/appsettings.json
@@ -58,11 +58,7 @@
     "SenderPassword": "Ql4e1befd",
     "SenderName": "Talabi",
     "Timeout": 30000,
-    "AdminEmail": "aydemirosmanali@gmail.com",
-    "Hotmail": {
-      "SenderEmail": "osmanaliaydemir@hotmail.com",
-      "SenderPassword": "!1q2w3e4R*"
-    }
+    "AdminEmail": "aydemirosmanali@gmail.com"
   },
   "ErrorLogging": {
     "AdminEmail": "aydemirosmanali@gmail.com",
