--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -86,6 +86,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.1
+  json_serializable: ^6.7.1
   build_runner: ^2.4.0
   flutter_launcher_icons: ^0.13.1
 
