--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.0
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
+  json_annotation: ^4.9.0
   intl: ^0.20.2
   flutter_localizations:
     sdk: flutter
