--- a/mobile/ios/ExportOptions.plist
+++ b/mobile/ios/ExportOptions.plist
@@ -5,6 +5,6 @@
     <key>method</key>
     <string>app-store</string>
     <key>teamID</key>
-    <string>YOUR_TEAM_ID</string>
+    <string>7H329SAYV8</string>
 </dict>
 </plist>
