--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   get_it: ^9.2.0
   injectable: ^2.7.1+2
   flutter_gen: 5.4.0
+  lottie: ^3.3.2
 
 dev_dependencies:
   flutter_test:
@@ -126,6 +127,7 @@ flutter:
   assets:
     - assets/icon/
     - assets/images/
+    - assets/animations/
   #   - assets/images/onboarding_1.png
   #   - assets/images/onboarding_2.png
   #   - assets/images/onboarding_3.png
