--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   provider: ^6.1.5+1
+  equatable: ^2.0.5
+  package_info_plus: ^8.1.2
   shared_preferences: ^2.5.3
   json_annotation: ^4.9.0
   intl: ^0.20.2
@@ -76,7 +78,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   logger: ^2.0.2+1
   device_info_plus: ^10.1.0
-  package_info_plus: ^8.0.0
+
   get_it: ^9.2.0
   injectable: ^2.7.1+2
   flutter_gen: 5.4.0
