--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   injectable: ^2.7.1+2
   flutter_gen: 5.4.0
   lottie: ^3.3.2
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -101,6 +102,7 @@ dev_dependencies:
   hive_generator: ^2.0.1
   json_serializable: ^6.7.1
   build_runner: ^2.4.0
+  freezed: ^2.5.2
   flutter_launcher_icons: ^0.13.1
   mockito: ^5.4.4
   injectable_generator: ^2.6.2
