feat: Migrate to Swashbuckle for OpenAPI, add basic authentication to documentation, and implement dynamic CSP for Scalar UI.

--- a/src/Talabi.Api/appsettings.json
+++ b/src/Talabi.Api/appsettings.json
@@ -95,6 +95,10 @@
     "PopularProductsCacheTTLMinutes": 30,
     "DefaultCacheTTLMinutes": 15
   },
+  "Documentation": {
+    "Username": "admin",
+    "Password": "talabi2024"
+  },
   "Cors": {
     "Local": {
       "AllowedOrigins": [
