feat: Implement real-time notifications with SignalR, dashboard alerts, sound effects, and JWT authentication for enhanced updates.

--- a/src/Talabi.Portal/appsettings.json
+++ b/src/Talabi.Portal/appsettings.json
@@ -21,7 +21,13 @@
   },
   "ApiSettings": {
     "BaseUrl": "https://localhost:7278",
-    "SignalRHubUrl": "https://localhost:7278/hubs"
+    "SignalRHubUrl": "https://localhost:7278/hubs/notifications"
+  },
+  "JwtSettings": {
+    "Secret": "TalabiSuperSecretKeyForJWT2024!ThisIsAVeryLongSecretKeyForHS256Algorithm",
+    "Issuer": "TalabiApi",
+    "Audience": "TalabiApp",
+    "ExpirationInMinutes": 1440
   },
   "Authentication": {
     "CookieName": "TalabiPortalAuth",
