config: Update API and SignalR hub URLs to production domain in appsettings.json.

--- a/src/Talabi.Portal/appsettings.json
+++ b/src/Talabi.Portal/appsettings.json
@@ -21,8 +21,8 @@
     "DefaultConnection": "Server=db29009.public.databaseasp.net; Database=db29009; User Id=db29009; Password=Ap6-=2PtcE!7; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   },
   "ApiSettings": {
-    "BaseUrl": "https://localhost:7278",
-    "SignalRHubUrl": "https://localhost:7278/hubs/notifications"
+    "BaseUrl": "https://talabi.runasp.net",
+    "SignalRHubUrl": "https://talabi.runasp.net/hubs/notifications"
   },
   "JwtSettings": {
     "Secret": "TalabiSuperSecretKeyForJWT2024!ThisIsAVeryLongSecretKeyForHS256Algorithm",
