--- a/src/Talabi.Infrastructure/Talabi.Infrastructure.csproj
+++ b/src/Talabi.Infrastructure/Talabi.Infrastructure.csproj
@@ -25,4 +25,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Talabi.Api.Tests" />
+  </ItemGroup>
+
 </Project>
