refactor: update API endpoint references to use VendorApiEndpoints for vendor-related operations, improving code maintainability and clarity

--- a/src/Talabi.Portal/appsettings.json
+++ b/src/Talabi.Portal/appsettings.json
@@ -34,5 +34,16 @@
     "CookieName": "TalabiPortalAuth",
     "ExpireTimeSpan": "12:00:00",
     "SlidingExpiration": true
+  },
+  "Email": {
+    "SmtpServer": "smtp.stackmail.com",
+    "SmtpPort": 465,
+    "UseSsl": true,
+    "UseTls": true,
+    "SenderEmail": "info@gmsglobal.tr",
+    "SenderPassword": "Ql4e1befd",
+    "SenderName": "Talabi",
+    "Timeout": 30000,
+    "AdminEmail": "aydemirosmanali@gmail.com"
   }
 }
