--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
     
     <application
-        android:label="Talabi Go"
+        android:label="Talaby Go"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
