--- a/src/Talabi.Api/appsettings.json
+++ b/src/Talabi.Api/appsettings.json
@@ -26,7 +26,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db29009.public.databaseasp.net; Database=db29009; User Id=db29009; Password=Ap6-=2PtcE!7; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=2.59.119.221\\MSSQLSERVER2022; Database=talabygo; User Id=talabygo; Password=0_anj29M2; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   },
   "JwtSettings": {
     "Secret": "TalabiSuperSecretKeyForJWT2024!ThisIsAVeryLongSecretKeyForHS256Algorithm",
