--- a/src/Talabi.Portal/appsettings.json
+++ b/src/Talabi.Portal/appsettings.json
@@ -18,11 +18,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db29009.public.databaseasp.net; Database=db29009; User Id=db29009; Password=Ap6-=2PtcE!7; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=2.59.119.221\\MSSQLSERVER2022; Database=talabygo; User Id=talabygo; Password=0_anj29M2; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   },
   "ApiSettings": {
-    "BaseUrl": "https://talabi.runasp.net",
-    "SignalRHubUrl": "https://talabi.runasp.net/hubs/notifications"
+    "BaseUrl": "https://api.talabygo.com",
+    "SignalRHubUrl": "https://api.talabygo.com/hubs/notifications"
   },
   "JwtSettings": {
     "Secret": "TalabiSuperSecretKeyForJWT2024!ThisIsAVeryLongSecretKeyForHS256Algorithm",
