--- a/src/Talabi.Api/web.config
+++ b/src/Talabi.Api/web.config
@@ -2,7 +2,11 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+      <modules>
+        <remove name="WebDAVModule" />
+      </modules>
       <handlers>
+        <remove name="WebDAV" />
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore 
