feat: Implement wallet, authentication, and order management features, and add multi-language localization.

--- a/src/Talabi.Api/appsettings.json
+++ b/src/Talabi.Api/appsettings.json
@@ -62,7 +62,7 @@
   },
   "ErrorLogging": {
     "AdminEmail": "aydemirosmanali@gmail.com",
-    "SendEmailForErrors": true,
+    "SendEmailForErrors": false,
     "SendEmailForFatalOnly": false
   },
   "AppSettings": {
